--- a/A Measure of Linear Relationship.ipynb
+++ b/A Measure of Linear Relationship.ipynb
@@ -4,17 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Pearson's product-moment correlation for IB Diploma Mathematics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Introduction\n",
     "\n",
-    "In this article, I use Python to analyze bivariate data using Pearon's product-momnet correlation coefficient `r`, drawing scatter diagrams, lines of best fit and the regression line."
+    "In this article, I use Python to analyze bivariate data using Pearon's product-momnet correlation coefficient `r`, drawing scatter diagrams, lines of best fit and the regression line.\n",
+    "\n",
+    "Bivariate data involves two types of related data. Pearson's product-moment correlation coefficient tells you how linearly these two data are related.\n",
+    "\n",
+    "\n",
+    "We can display the collected data on a graph called a scatter plot. The horizontal axis is called x-axis and we call the coordinate of x-axis the independent variable. The vertical axis is called y-axis and we call the coordinate of y-axis the dependent variable.   \n",
+    "\n",
+    "\n",
+    "I downloaded the data from this [link](https://stats.oecd.org/Index.aspx?DataSetCode=HOUSE_PRICES).\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "data = pd.read_csv('https://raw.githubusercontent.com/shinokada/python-for-ib-diploma-mathematics/master/Data/tshirts-horizontal.csv')\n",
+    "data\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
