Update A Measure of Linear Relationship

--- a/The Chi-square Goodness of Fit Test and The Pooled two-sample t-test .ipynb
+++ b/The Chi-square Goodness of Fit Test and The Pooled two-sample t-test .ipynb
@@ -277,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using a CSV file"
+    "## Real-life example"
    ]
   },
   {
