Update linear relation

--- a/A Measure of Linear Relationship.ipynb
+++ b/A Measure of Linear Relationship.ipynb
@@ -175,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11c339f10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11c80cb90>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -202,7 +202,7 @@
    "source": [
     "# https://gist.github.com/shinokada/c732d107ca5c90b1ec2a33e8504d95a4\n",
     "\n",
-    "sns.scatterplot(x='gain', y='loss', data=data_t)\n"
+    "sns.scatterplot(x='gain', y='loss', data=data_t)"
    ]
   },
   {
@@ -245,8 +245,7 @@
     "\n",
     "print(\"\"\"The equation of reegression line is y=%.3fx+%.3f.\"\"\" % (slope,intercept))\n",
     "print(\"\"\"Pearson's product-moment correlation coefficient is %.4f.\"\"\" % (r_value))\n",
-    "print(\"\"\"p-value is %.4f.\"\"\" % (p_value))\n",
-    "\n"
+    "print(\"\"\"p-value is %.4f.\"\"\" % (p_value))"
    ]
   },
   {
@@ -412,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +440,7 @@
     "\n",
     "his_pop = pd.read_csv('https://raw.githubusercontent.com/shinokada/python-for-ib-diploma-mathematics/master/Data/historical_population.csv')\n",
     "print(his_pop.shape)\n",
-    "print(his_pop.head())\n"
+    "print(his_pop.head())"
    ]
   },
   {
@@ -781,7 +780,7 @@
     "\n",
     "df_pop = pop.iloc[:,8]\n",
     "df_pop = df_pop.reset_index(drop=True)\n",
-    "print(df_pop)\n"
+    "print(df_pop)"
    ]
   },
   {
@@ -822,7 +821,6 @@
     "# https://gist.github.com/shinokada/0cb4e679b3764d8c55453637e8c78365\n",
     "\n",
     "# Method 2\n",
-    "\n",
     "df_pop2 = his_pop[(his_pop.Country=='Australia') & (his_pop.Sex =='Total') & (his_pop.AGE=='TOTAL')]\n",
     "df_pop2 = df_pop2.iloc[:,8]\n",
     "df_pop2 = df_pop2.reset_index(drop=True) # reset the index \n",
@@ -1057,8 +1055,9 @@
     }
    ],
    "source": [
-    "df_lab = lab.iloc[:,14]\n",
+    "# https://gist.github.com/shinokada/cb81d2d5a7b5943b1966546c0d026c07\n",
     "\n",
+    "df_lab = lab.iloc[:,14]\n",
     "print(df_lab)"
    ]
   },
@@ -1071,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1084,8 @@
     }
    ],
    "source": [
-    "# github\n",
+    "# https://gist.github.com/shinokada/6fdfbfdbfa120ea73d2af792a5009f14\n",
+    "\n",
     "print(type(df_pop))\n",
     "from scipy.stats import pearsonr\n",
     "r, pval = pearsonr(df_pop,df_lab)\n",
@@ -1124,7 +1124,7 @@
     }
    ],
    "source": [
-    "#\n",
+    "# https://gist.github.com/shinokada/eb95e57831ca3898eb1048f0593f6f54\n",
     "\n",
     "d = {'Population':df_pop,'Labour':df_lab}\n",
     "df = pd.DataFrame(d)\n",
@@ -1229,6 +1229,8 @@
     }
    ],
    "source": [
+    "#\n",
+    "\n",
     "df = pd.DataFrame({'A': df_x,\n",
     "                   'B': df_y,\n",
     "                   'C': [5,6,9,15,20]})\n",
@@ -1295,7 +1297,7 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "Here goes conclusion"
+    "By using Python and it's libraries, you can find all necessary data with few lines of code. Also you can visualize your data easily."
    ]
   },
   {
@@ -1327,11 +1329,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- https://www.shanelynn.ie/select-pandas-dataframe-rows-and-columns-using-iloc-loc-and-ix/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- https://seaborn.pydata.org/generated/seaborn.heatmap.html"
+   ]
   }
  ],
  "metadata": {
