Update linear relationship

--- a/A Measure of Linear Relationship.ipynb
+++ b/A Measure of Linear Relationship.ipynb
@@ -13,13 +13,9 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "In this article, I use Python to analyze bivariate data using Pearon's product-momnet correlation coefficient `r`, drawing scatter diagrams, lines of best fit and the least-square regression line.\n",
-    "\n",
+    "In this article, I use Python to analyze bivariate data using Pearson's product-moment correlation coefficient r, drawing scatter diagrams, lines of best fit and the least-square regression line.\n",
     "Bivariate data involves two types of related data. Pearson's product-moment correlation coefficient tells you how linearly these two data are related.\n",
-    "\n",
-    "\n",
-    "We can display the collected data on a scatter plot. The horizontal axis is called x-axis and we call the coordinate of x-axis the independent variable. The vertical axis is called y-axis and we call the coordinate of y-axis the dependent variable.   \n",
-    "\n",
+    "We can display the collected data on a scatter plot. The horizontal axis is called the x-axis and we call the coordinate of x-axis the independent variable. The vertical axis is called the y-axis and we call the coordinate of y-axis the dependent variable.\n",
     "\n",
     "I downloaded the data from this [link](https://stats.oecd.org/Index.aspx?DataSetCode=HOUSE_PRICES).\n",
     "\n",
@@ -35,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +112,7 @@
        "loss  4  12  18  21  24"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,12 +133,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Transpose the data. Pandas transpose does not modify the original data."
+    "We need to transpose the data so that data is categorized by columns. Pandas transpose does not modify the original data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +158,6 @@
     "# https://gist.github.com/shinokada/68e9ee9beb77ef4302148c4bd1d985ac\n",
     "\n",
     "data_t = data.T\n",
-    "\n",
     "print(data_t)"
    ]
   },
@@ -175,16 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11c80cb90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11c9fba50>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -221,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The mean point on the line of best fit and "
+    "# The mean point on the line of best fit "
    ]
   },
   {
@@ -361,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -447,12 +442,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the historical population data, let's select Australia. We also need to select Total in Sex column and TOTAL in AGE column."
+    "From the historical population data, let's select Australia. We also need to select Total in the Sex column and TOTAL in the AGE column."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +719,7 @@
        "41         NaN    NaN  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,14 +738,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to select Value column. I will show you two different ways to do it. [This website](https://www.shanelynn.ie/select-pandas-dataframe-rows-and-columns-using-iloc-loc-and-ix/) tells you how to use `loc` and `iloc`.\n",
-    "\n",
-    "Since Python index start from 0, it locates at 8th column."
+    "We need to select the Value column. I will show you two different ways to do it. [This website](https://www.shanelynn.ie/select-pandas-dataframe-rows-and-columns-using-iloc-loc-and-ix/) tells you how to use loc and iloc.\n",
+    "Since the Python index starts from 0, it locates in the 8th column."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -831,12 +825,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need one more data from OECD. The data is ALFS Labour force. We select data where Country is Australia. `head()` shows the first 5 data."
+    "We need one more data from OECD. The data is the ALFS Labour force. We select data where the Country is Australia. `head()` shows the first 5 data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1001,7 @@
        "4               NaN  11441.82        NaN   NaN  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,12 +1018,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need the Value column which is the 15th index, so we use 14 in `iloc`. Remember that Python index starts from 0."
+    "We need the Value column which is the 15th index, so we use 14 in `iloc`. Remember that the Python index starts from 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1223,13 +1217,13 @@
        "C  0.981327  0.889460  1.000000"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#\n",
+    "# https://gist.github.com/shinokada/144a703f5d27d372f34187da22ae668b\n",
     "\n",
     "df = pd.DataFrame({'A': df_x,\n",
     "                   'B': df_y,\n",
@@ -1241,7 +1235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please note that Pearson's correlation coefficient of A and B are 0.952816 which is the same as we found it before. In this case A and C has the strongest linear relationship."
+    "Please note that Pearson's correlation coefficient of A and B are 0.952816 which is the same as we found it before. In this case, A and C have the strongest linear relationship."
    ]
   },
   {
@@ -1255,21 +1249,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use the [Seaborn](https://seaborn.pydata.org/generated/seaborn.heatmap.html) to draw a [heatmap](https://stackabuse.com/seaborn-library-for-data-visualization-in-python-part-2/). Since we have the minimum of 0.88 and the maximum of 1.00 in the previous section, we set `vmax` and `vmin` accordingly. We use `Blues` for the color scheme. "
+    "We can use the [Seaborn](https://seaborn.pydata.org/generated/seaborn.heatmap.html) to draw a [heatmap](https://stackabuse.com/seaborn-library-for-data-visualization-in-python-part-2/). Since we have a minimum of 0.88 and a maximum of 1.00 in the previous section, we set `vmax` and `vmin` accordingly. We use `Blues` for the color scheme. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11c2e0d10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11c2cecd0>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1285,7 +1279,7 @@
     }
    ],
    "source": [
-    "#\n",
+    "# https://gist.github.com/shinokada/90835d0d8bd6b5d3ef057cb2aae08b51\n",
     "\n",
     "df_corr = df.corr()\n",
     "sns.heatmap(df_corr, vmax=1.00, vmin=0.85, cmap='Blues')"
@@ -1297,7 +1291,7 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "By using Python and it's libraries, you can find all necessary data with few lines of code. Also you can visualize your data easily."
+    "By using Python and it's libraries, you can find all necessary data with few lines of code. Also, you can visualize your data easily."
    ]
   },
   {
